--- a/FoodCollector/Settings.storyboard
+++ b/FoodCollector/Settings.storyboard
@@ -360,7 +360,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lfu-Ao-ZK6">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lfu-Ao-ZK6">
                                 <rect key="frame" x="-4" y="20" width="383" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -368,7 +368,7 @@
                                         <rect key="frame" x="0.0" y="28" width="383" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fvS-ZW-d4n" id="nqh-bf-POD">
-                                            <rect key="frame" x="0.0" y="0.0" width="383" height="119"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKP-Yv-fG7">
@@ -384,7 +384,9 @@
                                                         <constraint firstAttribute="width" constant="46" id="AAa-sj-aEe"/>
                                                         <constraint firstAttribute="height" constant="30" id="u8Q-nW-UXC"/>
                                                     </constraints>
-                                                    <state key="normal" title="Edit"/>
+                                                    <state key="normal" title="Edit">
+                                                        <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
                                                     <connections>
                                                         <action selector="editPhotoAction:" destination="fvS-ZW-d4n" eventType="touchUpInside" id="hhr-LH-3vA"/>
                                                     </connections>
@@ -395,13 +397,23 @@
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pzL-2F-LhW">
+                                                    <rect key="frame" x="20" y="119" width="335" height="1"/>
+                                                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="gD7-BP-37U"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="pzL-2F-LhW" secondAttribute="trailing" constant="20" id="6QL-7Q-4wW"/>
                                                 <constraint firstItem="mua-e4-tjH" firstAttribute="centerX" secondItem="fKP-Yv-fG7" secondAttribute="centerX" id="Ij2-Bu-1HK"/>
+                                                <constraint firstItem="pzL-2F-LhW" firstAttribute="leading" secondItem="nqh-bf-POD" secondAttribute="leadingMargin" constant="12" id="Jph-Rw-Dxk"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="c04-67-170" secondAttribute="trailing" constant="47" id="Kox-wH-Kjf"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="pzL-2F-LhW" secondAttribute="bottom" constant="-8" id="Luf-Ss-dMD"/>
                                                 <constraint firstItem="c04-67-170" firstAttribute="top" secondItem="nqh-bf-POD" secondAttribute="topMargin" constant="9" id="ZAb-FC-B9y"/>
                                                 <constraint firstItem="c04-67-170" firstAttribute="leading" secondItem="fKP-Yv-fG7" secondAttribute="trailing" constant="41" id="b1W-iQ-KvB"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="mua-e4-tjH" secondAttribute="bottom" constant="-8" id="b8q-dj-xZr"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="mua-e4-tjH" secondAttribute="bottom" constant="-7" id="b8q-dj-xZr"/>
                                                 <constraint firstItem="c04-67-170" firstAttribute="centerY" secondItem="nqh-bf-POD" secondAttribute="centerY" constant="-10" id="jCH-Qs-rvG"/>
                                                 <constraint firstItem="fKP-Yv-fG7" firstAttribute="leading" secondItem="nqh-bf-POD" secondAttribute="leadingMargin" constant="7" id="q4i-NU-Dz1"/>
                                                 <constraint firstItem="fKP-Yv-fG7" firstAttribute="top" secondItem="nqh-bf-POD" secondAttribute="topMargin" constant="2" id="tih-Jr-fK6"/>
@@ -422,7 +434,7 @@
                                         <rect key="frame" x="0.0" y="148" width="383" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iuS-K6-02B" id="woh-3y-XHT">
-                                            <rect key="frame" x="0.0" y="0.0" width="383" height="59"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fbh-rP-OHP">
@@ -447,13 +459,23 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lmv-AS-6Oi">
+                                                    <rect key="frame" x="20" y="58" width="335" height="1"/>
+                                                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="nsX-Li-JPN"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="lmv-AS-6Oi" firstAttribute="leading" secondItem="woh-3y-XHT" secondAttribute="leadingMargin" constant="12" id="2ll-SB-59h"/>
                                                 <constraint firstItem="Yda-8j-3XV" firstAttribute="centerY" secondItem="woh-3y-XHT" secondAttribute="centerY" id="55G-eT-8fx"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="lmv-AS-6Oi" secondAttribute="bottom" constant="-7" id="9VC-5q-R4a"/>
                                                 <constraint firstItem="fbh-rP-OHP" firstAttribute="leading" secondItem="woh-3y-XHT" secondAttribute="leadingMargin" constant="12" id="Etx-GL-UoR"/>
                                                 <constraint firstItem="fCA-Cp-fhw" firstAttribute="leading" secondItem="woh-3y-XHT" secondAttribute="leadingMargin" constant="12" id="Mr3-qm-0Zp"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Yda-8j-3XV" secondAttribute="trailing" constant="13" id="Ozj-1R-ORr"/>
                                                 <constraint firstItem="fCA-Cp-fhw" firstAttribute="centerY" secondItem="woh-3y-XHT" secondAttribute="centerY" id="Pl9-Dv-s8t"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="lmv-AS-6Oi" secondAttribute="trailing" constant="20" id="Ppk-gf-z3w"/>
                                                 <constraint firstItem="fbh-rP-OHP" firstAttribute="centerY" secondItem="woh-3y-XHT" secondAttribute="centerY" id="TKo-6O-b3T"/>
                                                 <constraint firstItem="Yda-8j-3XV" firstAttribute="leading" secondItem="fbh-rP-OHP" secondAttribute="trailing" constant="16" id="XzT-48-6jy"/>
                                                 <constraint firstItem="Yda-8j-3XV" firstAttribute="leading" secondItem="fCA-Cp-fhw" secondAttribute="trailing" constant="16" id="jux-Mj-rko"/>
