--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -641,7 +641,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s27-5e-O5f">
-                                <rect key="frame" x="33" y="131" width="313" height="400"/>
+                                <rect key="frame" x="33" y="84" width="313" height="407"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lable" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7M-U0-TaK">
                                         <rect key="frame" x="8" y="16" width="297" height="24"/>
@@ -763,6 +763,7 @@
                                     <constraint firstItem="BxB-dt-0VK" firstAttribute="leading" secondItem="s27-5e-O5f" secondAttribute="leading" constant="8" id="2RH-XR-uN0"/>
                                     <constraint firstItem="D7M-U0-TaK" firstAttribute="top" secondItem="s27-5e-O5f" secondAttribute="top" constant="16" id="4ij-kJ-pCs"/>
                                     <constraint firstAttribute="trailing" secondItem="D7M-U0-TaK" secondAttribute="trailing" constant="8" id="4yU-fz-NCv"/>
+                                    <constraint firstAttribute="bottom" secondItem="htz-OJ-PgV" secondAttribute="bottom" constant="7" id="6fN-Fl-twh"/>
                                     <constraint firstItem="Jel-EM-eod" firstAttribute="leading" secondItem="htz-OJ-PgV" secondAttribute="trailing" id="96u-X4-Cwm"/>
                                     <constraint firstItem="htz-OJ-PgV" firstAttribute="top" secondItem="GIX-lL-n4w" secondAttribute="bottom" constant="8" id="9w2-SO-QxE"/>
                                     <constraint firstItem="D7M-U0-TaK" firstAttribute="leading" secondItem="s27-5e-O5f" secondAttribute="leading" constant="8" id="BFw-Hw-5yp"/>
@@ -778,6 +779,7 @@
                                     <constraint firstAttribute="trailing" secondItem="GIX-lL-n4w" secondAttribute="trailing" id="gzV-JY-RNd"/>
                                     <constraint firstAttribute="trailing" secondItem="BxB-dt-0VK" secondAttribute="trailing" constant="8" id="ieO-Nu-cYI"/>
                                     <constraint firstItem="yl2-X3-174" firstAttribute="leading" secondItem="s27-5e-O5f" secondAttribute="leading" constant="32" id="k9x-c3-qqE"/>
+                                    <constraint firstAttribute="bottom" secondItem="QXI-mc-NGW" secondAttribute="bottom" constant="7" id="lu3-fF-UYD"/>
                                     <constraint firstItem="GIX-lL-n4w" firstAttribute="top" secondItem="yl2-X3-174" secondAttribute="bottom" constant="8" id="njy-qb-DPz"/>
                                     <constraint firstItem="QXI-mc-NGW" firstAttribute="leading" secondItem="Jel-EM-eod" secondAttribute="trailing" id="pKA-aF-szQ"/>
                                     <constraint firstAttribute="trailing" secondItem="QXI-mc-NGW" secondAttribute="trailing" id="pLi-Dj-1x2"/>
@@ -795,12 +797,19 @@
                             <constraint firstItem="xWh-ag-QGI" firstAttribute="top" secondItem="Uao-qf-QO7" secondAttribute="topMargin" constant="64" id="EP4-oh-EAz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="s27-5e-O5f" secondAttribute="trailing" constant="13" id="GTP-i1-j7O"/>
                             <constraint firstItem="qLv-Kp-Zeo" firstAttribute="top" secondItem="xWh-ag-QGI" secondAttribute="bottom" id="XiO-F7-wg5"/>
-                            <constraint firstItem="s27-5e-O5f" firstAttribute="top" secondItem="iRR-xz-gyk" secondAttribute="bottom" constant="67" id="fDh-bk-cVU"/>
+                            <constraint firstItem="qLv-Kp-Zeo" firstAttribute="top" secondItem="s27-5e-O5f" secondAttribute="bottom" constant="136" id="ZK4-4r-1zx"/>
+                            <constraint firstItem="s27-5e-O5f" firstAttribute="top" secondItem="iRR-xz-gyk" secondAttribute="bottom" constant="20" id="fDh-bk-cVU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xWh-ag-QGI" secondAttribute="trailing" constant="-24" id="jfC-sb-cl1"/>
-                            <constraint firstItem="qLv-Kp-Zeo" firstAttribute="top" secondItem="s27-5e-O5f" secondAttribute="bottom" constant="136" id="mCZ-QY-rsv"/>
+                            <constraint firstItem="qLv-Kp-Zeo" firstAttribute="top" relation="lessThanOrEqual" secondItem="s27-5e-O5f" secondAttribute="bottom" constant="136" id="mCZ-QY-rsv"/>
                             <constraint firstItem="xWh-ag-QGI" firstAttribute="leading" secondItem="Uao-qf-QO7" secondAttribute="leadingMargin" constant="-20" id="owT-cL-fTp"/>
                             <constraint firstItem="s27-5e-O5f" firstAttribute="leading" secondItem="Uao-qf-QO7" secondAttribute="leadingMargin" constant="17" id="rX6-ZL-jDR"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ZK4-4r-1zx"/>
+                                <exclude reference="mCZ-QY-rsv"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="bny-KH-62t"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
